force-app/main/default/objects/vlocity_cmt__Statement__c/vlocity_cmt__Statement__c.object-meta.xml
<CustomObject>
    <description>Summaries from statements produced by a client&apos;s billing software can be imported into this object. Historical statements can be retained as well.</description>
    <label>Statement</label>
    <nameField>
        <label>Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>