force-app/main/default/objects/vlocity_cmt__Statement__c/fields/kWh_used__c.field-meta.xml
<CustomField>
    <fullName>kWh_used__c</fullName>
    <label>Volume used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>