force-app/main/default/objects/vlocity_cmt__Statement__c/fields/VDO_Apparent_Power__c.field-meta.xml
<CustomField>
    <fullName>VDO_Apparent_Power__c</fullName>
    <label>VDO Apparent Power</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>