force-app/main/default/objects/vlocity_cmt__Statement__c/fields/VDO_Forecasted_Demand__c.field-meta.xml
<CustomField>
    <fullName>VDO_Forecasted_Demand__c</fullName>
    <label>VDO Forecasted Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>