force-app/main/default/objects/vlocity_cmt__Statement__c/fields/VDO_Load_Factor__c.field-meta.xml
<CustomField>
    <fullName>VDO_Load_Factor__c</fullName>
    <label>VDO Load Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>