force-app/main/default/objects/vlocity_cmt__Statement__c/fields/VDO_Power__c.field-meta.xml
<CustomField>
    <fullName>VDO_Power__c</fullName>
    <label>VDO Power</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>