force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__AdditionalDiscount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdditionalDiscount__c</fullName>
    <label>Additional Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>