force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__AverageTemperature__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AverageTemperature__c</fullName>
    <description>Average temperature for the billing period.</description>
    <label>Average Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>