force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__BillPeriodDays__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillPeriodDays__c</fullName>
    <description>Number of days included in the current billing period.</description>
    <label>Days in Bill Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>