force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__CurrentMeterRead__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CurrentMeterRead__c</fullName>
    <description>Current meter read for the billing period.</description>
    <label>Current Meter Read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>