force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__DueDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>