force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__PreviousMeterRead__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PreviousMeterRead__c</fullName>
    <description>Meter read for the previous billing period.</description>
    <label>Previous Meter Read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>