force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__StatementAccountstatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementAccountstatus__c</fullName>
    <label>Statement Account status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>