force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__StatementDetails__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementDetails__c</fullName>
    <label>Statement Details</label>
    <length>30</length>
    <type>Text</type>
</CustomField>