force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__StatementMonth__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementMonth__c</fullName>
    <label>Statement Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>