force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__StatementYear__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementYear__c</fullName>
    <label>Statement Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>