force-app/main/default/objects/vlocity_cmt__Statement__c/fields/vlocity_cmt__TotalUsage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalUsage__c</fullName>
    <description>Total usage for the billing period.</description>
    <label>Total Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>