force-app/main/default/objects/vlocity_cmt__Statement__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__AccountId__c</columns>
    <columns>vlocity_cmt__StatementDate__c</columns>
    <columns>vlocity_cmt__DueDate__c</columns>
    <columns>vlocity_cmt__TotalUsage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>